# parsy_bench

./: CMakeLists.txt  README.md
cholesky/: CMakeLists.txt  Cholesky_Perf_Comm_modeling.h  Cholesky_Perf_Modeling.h  ColumnCount.h  InitialCut.h  InspectionDAG_03.h  InspectionLevel.h  InspectionLevel_06.h  Inspection_Block.h  Inspection_BlockC.h  Inspection_DAG_02.h  Inspection_Prune.h  LSparsity.h  Merge.h  MergeWithTightSlack.h  MergewithBalancedSlack.h  MergewithBalancedSlackGivenLevels.h  MyBLAS.h  PB_Cholesky.h  Parallel_PB_Cholesky_wavefront.h  TestMKL.cpp  Transpose.h  colCounts.h  parallel_PB_Cholesky_05.h  performanceModel.h  sereial_Cholesky_01.h
common/: Etree.h  PostOrder.h  Reach.h  SparseUtils.h  TreeUtils.h  Util.h  def.h
examples/: CMakeLists.txt  MakingLowerHalf.cpp  choleskyTest01.cpp  choleskyTest03.cpp  triangularTest02.cpp  triangularTest_DAG.cpp  triangularTest_DAG_nonChordal.cpp
libExample/: CMakeLists.txt  MKL_Utils.h  cholesky_mkl.cpp  cholesky_pardiso6.cpp  mklExample.cpp  pardiso.lic  triangular_MKL_Chol.cpp  triangular_MKL_nonChordal.cpp
scripts/: dlMat.sh  edgeCutEval.sh  eval.sh  eval2.sh  evalAuto.sh  evalComet.sh  evalComet_MKL.sh  evalarge.sh  evalarge2.sh  lib_eval.sh  mkl_jame2.txt  mkl_kevin.txt  pardiso6_cholesky.txt  pardiso_james1.txt  updown.sh  vtuneProfiler_wait.sh  vtuneProfiler_wait_mkl.sh  vtuneProfiler_wait_pastix.sh  waitTimeAnalysis.sh  waitTimeAnalysis_mkl.sh  waitTimeAnalysis_pastix.sh
scripts/perfProfiler/: main.py  visualize
triangularSolve/: CMakeLists.txt  Coarse_Inspection_Level.h  Inspection_Block.h  Inspection_Level.h  Triangular_BCSC.h  Triangular_CSC.h  main.cpp
